--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body {
 
     <div class="book">
     <label for="page-1"  class="book__page book__page--1">
-      <img src="/HTML/css&HTML.jpeg" style= "width:100%;height:100%" alt="css&HTML">
+      <img src="css&HTML.jpeg" style= "width:100%;height:100%" alt="css&HTML">
     </label>
     
     <label for="page-2" class="book__page book__page--1">
